Foi refatorado o codigo e a estrutura das pastas separando as rotas controllers middlewares
